# k230_mpp

./: .gitignore  Kconfig  build_env.sh
include/: k_type.h
include/comm/: k_autoconf_comm.h  k_board_config_comm.h  k_connector_comm.h  k_isp_comm.h  k_sensor_comm.h  k_vicap_comm.h
include/ioctl/: k_connector_ioctl.h  k_sensor_ioctl.h
kernel/: Makefile  rt-smart.mk
kernel/connector/: Makefile
kernel/connector/src/: connector_comm.c  connector_dev.c  connector_dev.h  debugger.c  hx8399.c  ili9806.c  lt9611.c  st7701.c  virtdev.c
kernel/pm/src/: pm_core.c
kernel/sensor/: Makefile
kernel/sensor/src/: gc2093.c  ov5647_csi2_drv.c  ov9732_drv.c  sensor_comm.c  sensor_dev.c  sensor_dev.h
middleware/: Makefile  mkenv.mk  mpp.mk
middleware/sample/: Makefile
middleware/sample/sample_demuxer/: Makefile
middleware/sample/sample_muxer/: Makefile  main.cpp
middleware/sample/sample_player/: Makefile
middleware/sample/sample_rtspclient/: Makefile
middleware/sample/sample_rtsppusher/: Makefile
middleware/sample/sample_rtspserver/: Makefile
middleware/src/: Makefile
middleware/src/kdmedia/: Makefile  media.cpp
middleware/src/live555/: Makefile
middleware/src/mp4_format/: Makefile
middleware/src/mp4_player/: Makefile
middleware/src/rtsp_client/: Makefile
middleware/src/rtsp_pusher/: Makefile
middleware/src/rtsp_server/: Makefile
userapps/api/: mpi_connector_api.h
userapps/sample/: Makefile  mkenv.mk
userapps/sample/elf/: sample_demuxer.elf  sample_player.elf
userapps/sample/fastboot_app/: CMakeLists.txt  Makefile  main.cc
userapps/sample/sample_adc/: Makefile
userapps/sample/sample_ahd_sensor/: ahd_sensor.c
userapps/sample/sample_audio/: Makefile  audio_sample.c  audio_sample.h  sample_audio.c
userapps/sample/sample_av/: sample_av.c
userapps/sample/sample_csc/: Makefile  sample_csc.c
userapps/sample/sample_dpu_vicap/: Makefile
userapps/sample/sample_dpu_vo/: Makefile  sample_dv.c  sample_dv_isp.c
userapps/sample/sample_dw200/: Makefile
userapps/sample/sample_eeprom/: Makefile
userapps/sample/sample_face_ae/: Makefile  main.cc
userapps/sample/sample_face_detect/: Makefile  main.cc  mobile_retinaface.cc
userapps/sample/sample_fft/: Makefile
userapps/sample/sample_triple_camera_facedetect/: CMakeLists.txt  Makefile  main.cc
(+71 files in other folders)
